--- a/front/src/assets/sass/main.sass
+++ b/front/src/assets/sass/main.sass
@@ -8,3 +8,30 @@ $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
+
+/** clear default style */
+
+h1, h2, h3, h4, h5, h6
+  margin: 0
+  padding: 0
+  line-height: 1
+
+p
+  margin: 0
+  padding: 0
+  line-height: 1
+
+ul
+  margin: 0
+  padding: 0
+  list-style: none
+
+a, a:hover
+  text-decoration: none
+  outline: none
+.btn:focus, .btn.focus
+  box-shadow: none
+
+img
+  user-select: none
+  pointer-events: none
