--- a/front/src/assets/sass/main.sass
+++ b/front/src/assets/sass/main.sass
@@ -1,15 +1,21 @@
-$primary   : #1976D2
-$secondary : #26A69A
-$accent    : #9C27B0
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap')
 
-$dark      : #1D1D1D
+$primary   : #075daf
+$secondary : #01579f
+$accent    : #0E243E
 
+$dark      : #484848
+
+$sss : red
 $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
 
 /** clear default style */
+
+body
+  font-family: "Rubik", sans-serif!important
 
 h1, h2, h3, h4, h5, h6
   margin: 0
